--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,205 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --primary-color: #16161a;
+  --secondary-color: #242629;
+  --tertiary-color: #e31836;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --header-height: 5em;
+  --header-margin: 0em;
 }
 
 * {
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  color: white;
+  font-family: var(--dmsans);
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--primary-color);
 }
 
-a {
-  color: inherit;
+button {
+  transition: 0.5s;
+}
+button:hover {
+  cursor: pointer;
+}
+
+header {
+  position: sticky;
+  top: 0;
+
+  width: 100%;
+  height: var(--header-height);
+  padding: 1em;
+
+  background-color: var(--primary-color);
+  box-shadow: 0px 11px 20px rgba(0, 0, 0, 0.25);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  z-index: 999;
+}
+header img {
+  width: 35px;
+  height: 35px;
+  margin-right: 0.5em;
+}
+header p {
+  font-weight: bold;
+}
+header button {
+  background: none;
+  border-radius: 25px;
+  font-weight: bold;
+  padding: 0.5em 1em 0.5em 1em;
+  border: none;
+}
+header button:last-child {
+  background-color: var(--tertiary-color);
+  margin-left: 0.35em;
+}
+header .site-title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5em;
+}
+header .site-title:hover {
+  cursor: pointer;
+}
+header .nav {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 3em;
+}
+header .nav a {
+  color: var(--tertiary-color);
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* Footer */
+footer {
+  width: 100%;
+  padding: 4em;
+}
+.footer-container {
+  background-color: var(--secondary-color);
+  border-radius: 25px;
+  padding: 6em;
+
+  display: grid;
+  grid-template-columns: 1fr 20%;
+}
+.footer-container div p:first-child {
+  font-weight: bold;
+  font-size: 2.25em;
+
+  margin-bottom: 0.5em;
+}
+.footer-container div p:nth-child(2) {
+  margin-bottom: 3em;
+}
+.footer-container ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer-container a {
+  text-decoration: none;
+}
+.footer-container .selected {
+  color: var(--tertiary-color);
+}
+/* Cursor Box */
+.cursor-box {
+  position: fixed;
+
+  background-color: var(--tertiary-color);
+  border-radius: 15px;
+  padding: 1.5em;
+  line-height: 100%;
+  text-align: center;
+}
+.cursor-box:hover {
+  cursor: default;
+}
+
+/* User Message */
+.message-container {
+  max-width: 45%;
+  position: fixed;
+  left: 1em;
+  top: 1em;
+
+  padding: 1em;
+
+  animation: message-in 0.75s forwards normal 1;
+
+  z-index: 1001;
+}
+.message-container.success {
+  background-color: rgba(50, 205, 50, 0.85);
+  border: 2px solid rgb(50, 205, 50);
+  border-radius: 15px;
+}
+.message-container.error {
+  background-color: rgba(227, 24, 54, 0.85);
+  border: 2px solid rgb(227, 24, 54);
+  border-radius: 15px;
+}
+.message-container.notice {
+  background-color: rgba(94, 94, 94, 0.85);
+  border: 2px solid rgb(94, 94, 94);
+  border-radius: 15px;
+}
+.message-container.success .message-heading::before {
+  content: "Success";
+}
+.message-container.error .message-heading::before {
+  content: "Error";
+}
+.message-container.notice .message-heading::before {
+  content: "Notice";
+}
+.message-heading {
+  width: 100%;
+  font-size: 1.25em;
+  font-weight: bold;
+  margin-bottom: 0.85em;
+}
+.message-content {
+  margin-bottom: 1em;
+}
+.message-container > button:not(button:last-child) {
+  margin-right: 1em;
+}
+@keyframes message-in {
+  from {
+    transform: translateY(-100px);
+    opacity: 0;
   }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+/* SVG coloring */
+.svg-white {
+  filter: invert(100%) sepia(0%) saturate(6215%) hue-rotate(338deg)
+    brightness(115%) contrast(100%);
+}
+.svg-black {
+}
+.svg-primary {
+}
+.svg-secondary {
+}
+.svg-tertiary {
+  filter: invert(17%) sepia(95%) saturate(3885%) hue-rotate(343deg)
+    brightness(91%) contrast(96%);
 }
