--- a/src/app/assets/css/houses.css
+++ b/src/app/assets/css/houses.css
@@ -95,6 +95,9 @@ aside ul {
   margin-bottom: 1em;
   list-style: none;
 }
+aside ul li {
+  margin-bottom: 0.5em;
+}
 
 .house-list {
   list-style: none;
@@ -105,11 +108,14 @@ aside ul {
 
   display: grid;
   grid-template-columns: 40% 1fr;
+  /* height: 315px; */
   margin-bottom: 2em;
 }
 .house-item > img {
+  object-fit: cover;
   width: 100%;
   height: 100%;
+  max-height: 300px;
 
   border-radius: 10px 0px 0px 10px;
 }
@@ -117,7 +123,7 @@ aside ul {
   padding: 1em;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
 }
 .date-created-container {
