--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,11 @@ body {
   background-color: var(--primary-color);
 }
 
+body,
+html {
+  height: 100%;
+}
+
 button {
   transition: 0.5s;
 }
@@ -27,7 +32,7 @@ button:hover {
 }
 
 header {
-  position: sticky;
+  position: fixed;
   top: 0;
 
   width: 100%;
@@ -91,6 +96,11 @@ header .account-container img {
 }
 header .account-container:hover {
   cursor: pointer;
+}
+
+body {
+  /* margin-top: calc(var(--header-height) + var(--header-margin)); */
+  padding-top: var(--header-height);
 }
 
 /* Footer */
