--- a/src/app/assets/css/house_details.css
+++ b/src/app/assets/css/house_details.css
@@ -79,7 +79,6 @@
 }
 .placeholder-img {
   padding: 1em;
-  background-color: red;
 }
 
 .info-container {
@@ -95,6 +94,8 @@
   background-color: var(--secondary-color);
   border-radius: var(--images-border-radius);
   padding: 2em;
+
+  grid-area: 1 / 1 / 2 / 2;
 }
 .owner-info h2 {
   margin-bottom: 2em;
@@ -145,6 +146,10 @@
   border: 1px solid white;
 }
 
+.house-info {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
 .house-info-header {
   margin-bottom: 3.5em;
 }
@@ -168,6 +173,9 @@
 }
 .house-info-footer {
   margin-top: 3em;
+  width: 100%;
+
+  grid-area: 2 / 1 / 3 / 3;
 }
 .house-info-footer *:first-child {
   margin-bottom: 1em;
@@ -218,6 +226,7 @@
   width: 100%;
 
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5em;
   align-items: flex-start;
 }
