--- a/src/app/assets/css/main.css
+++ b/src/app/assets/css/main.css
@@ -300,6 +300,7 @@
   aspect-ratio: 1/1;
   width: 4.25em;
   height: auto;
+  object-fit: cover;
 
   border-radius: 50%;
   background-size: contain;
